2013-07-28  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el: Optionally force offscreen frames back onscreen.
	(desktop-restoring-reuses-frames): New option.
	(desktop--compute-pos, desktop--move-onscreen): New functions.
	(desktop--make-frame): Use desktop--move-onscreen.

2013-07-27  Alan Mackenzie  <acm@muc.de>

	Fontify a Java generic method as a function.
	* progmodes/cc-langs.el (c-recognize-<>-arglists): Set the Java
	value to t.

2013-07-27  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el: Add command to rename todo files.
	(todo-rename-file): New command.
	(todo-key-bindings-t): Add key binding for it.  Change the
	bindings of todo-filter-regexp-items(-multifile) to use `x'
	instead of `r', since the latter is better suited to the new
	renaming command.

2013-07-27  Alan Mackenzie  <acm@muc.de>

	Make Java try-with-resources statement parse properly.
	* progmodes/cc-langs.el (c-block-stmt-1-2-kwds)
	(c-block-stmt-1-2-key): New language constants/variables.
	* progmodes/cc-engine.el (c-beginning-of-statement-1)
	(c-after-conditional): Adapt to deal with c-block-stmt-1-2-key.
	* progmodes/cc-fonts.el (c-font-lock-declarations): Adapt to deal
	with c-block-stmet-1-2-key.

2013-07-27  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop--make-frame): Apply most frame parameters after
	creating the frame to force (partially or totally) offscreen frames to
	be restored as such.

2013-07-26  Xue Fuqiao  <xfq.free@gmail.com>

	* vc/vc-dir.el (vc-dir-mode-map): Add binding for vc-root-diff.
	(Bug#14948)

2013-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/nadvice.el (advice--called-interactively-skip): Use the new
	`base' arg of backtrace-frame.

2013-07-26  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (list-processes): Doc fix.

2013-07-26  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop--select-frame):
	Try harder to reuse existing frames.

2013-07-26  Stefan Monnier  <monnier@iro.umontreal.ca>
