@@ -1,3 +1,10 @@
+2013-07-28  Stephen Berman  <stephen.berman@gmx.net>
+
+	* calendar/todo-mode.el (todo-rename-file): Fix incorrect use of
+	replace-regexp-in-string and inadvertent omissions in previous change.
+	(todo-filter-items): Ensure only file names are comma-separated in
+	renamed filtered items buffer.
+
 2013-07-28  Juanma Barranquero  <lekktu@gmail.com>
 
 	* desktop.el: Optionally force offscreen frames back onscreen.
